--- a/FO1_parser.ipynb
+++ b/FO1_parser.ipynb
@@ -15,12 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main'\n",
-    "\n",
+    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main'\n",
     "# import httpimport\n",
     "# with httpimport.remote_repo(url):\n",
     "#   from FO1st import *\n",
@@ -55,6 +54,39 @@
     "    else:\n",
     "      raise ValueError(f\"Invalid showOption: {showOption}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text = \"forall x1 P(-x_alpha+a!') imp a + b >= c and a * b* != c imp b < c^21\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizer: 'x1' is invalid (Token)\n"
+     ]
+    }
+   ],
+   "source": [
+    "testTokenizer(input_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -73,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
