--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -2,99 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def identifier_to_latex(instr):\n",
-    "  pos_underscore = instr.rfind('_')\n",
-    "  if pos_underscore >= 0:\n",
-    "    str1 = instr[:pos_underscore]\n",
-    "    str2 = instr[pos_underscore+1:]\n",
-    "    if str2:\n",
-    "      ret_val = r\"\\textsl{\" + str1.replace(\"_\", r\"\\_\") + r\"}\" + r\"_{\" + str2 + r\"}\"\n",
-    "    else:\n",
-    "      ret_val = r\"\\textsl{\" + instr.replace(\"_\", r\"\\_\") + r\"}\"\n",
-    "  else:\n",
-    "    str1 = instr\n",
-    "    ret_val = r\"\\textsl{\" + str1 + r\"}\"\n",
-    "\n",
-    "  return ret_val\n"
+    "import sys\n",
+    "sys.path.append('../')\n",
+    " \n",
+    "from FO1st import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text = \"forall x1 P(-x_alpha+a!') imp a + b >= c and a * b* != c imp b < c^21\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\textsl{Cats\\_and\\_Dogs}_{12}\n"
+      "Tokenizer: 'x1' is invalid (Token)\n"
      ]
     }
    ],
    "source": [
-    "instr = \"Cats_and_Dogs_12\"\n",
-    "print(identifier_to_latex(instr))"
+    "testTokenizer(input_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\textsl{Cats\\_and\\_Dogs\\_}\n"
-     ]
-    }
-   ],
-   "source": [
-    "instr = \"Cats_and_Dogs_\"\n",
-    "print(identifier_to_latex(instr))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\textsl{Cats\\_and}_{Dogs}\n"
-     ]
-    }
-   ],
-   "source": [
-    "instr = \"Cats_and_Dogs\"\n",
-    "print(identifier_to_latex(instr))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\textsl{Cats}\n"
-     ]
-    }
-   ],
-   "source": [
-    "instr = \"Cats\"\n",
-    "print(identifier_to_latex(instr))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -113,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
