FO tokenizing done

--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -9,16 +9,29 @@
     "import sys\n",
     "sys.path.append('../')\n",
     " \n",
-    "from FO1st import *"
+    "from FO1st import *\n",
+    "\n",
+    "from IPython.display import display, Math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- ! ' ^ #\n",
+      "+ * / % =\n",
+      "< > ( ) [\n",
+      "] { } , "
+     ]
+    }
+   ],
    "source": [
-    "input_text = \"forall x1 P(-x_alpha+a!') imp a + b >= c and a * b* != c imp b < c^21\""
+    "print_in_chunk(Token.SPECIAL_CHARS)"
    ]
   },
   {
@@ -30,7 +43,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tokenizer: 'x1' is invalid (Token)\n"
+      "x (var)\n",
+      "^+ (fctn_post, arity=1, precedence=4)\n",
+      "+ (fctn_in_1, arity=2, precedence=1)\n",
+      "y1 (var)\n",
+      "^- (fctn_post, arity=1, precedence=4)\n",
+      "+ (fctn_in_1, arity=2, precedence=1)\n",
+      "cBob (const)\n",
+      "^* (fctn_post, arity=1, precedence=4)\n",
+      "+ (fctn_in_1, arity=2, precedence=1)\n",
+      "d (const)\n",
+      "^# (fctn_post, arity=1, precedence=4)\n",
+      "+ (fctn_in_1, arity=2, precedence=1)\n",
+      "y (var)\n",
+      "^o (fctn_post, arity=1, precedence=4)\n",
+      "* (fctn_in_2, arity=2, precedence=2)\n",
+      "z (var)\n",
+      "^inv (fctn_post, arity=1, precedence=4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_text = \"x^+ + y1^- + cBob^* + d^# + y^o * z^inv\"\n",
+    "testTokenizer(input_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text = \"forall x P(-x30!') imp a^inv + b^o >= c^* and a * b* != c imp f_a2(f_b(b), c_Socrates) < c^21\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forall (quantifier, arity=1, precedence=4)\n",
+      "x (var)\n",
+      "P (pred_pre, arity=0)\n",
+      "( (lparen)\n",
+      "- (fctn_in_1, arity=2, precedence=1)\n",
+      "x30 (var)\n",
+      "! (fctn_post, arity=1, precedence=4)\n",
+      "' (fctn_post, arity=1, precedence=4)\n",
+      ") (rparen)\n",
+      "imp (conn_arrow, arity=2, precedence=1)\n",
+      "a (const)\n",
+      "^inv (fctn_post, arity=1, precedence=4)\n",
+      "+ (fctn_in_1, arity=2, precedence=1)\n",
+      "b (const)\n",
+      "^o (fctn_post, arity=1, precedence=4)\n",
+      ">= (pred_in, arity=2)\n",
+      "c (const)\n",
+      "^* (fctn_post, arity=1, precedence=4)\n",
+      "and (conn_2ary, arity=2, precedence=2)\n",
+      "a (const)\n",
+      "* (fctn_in_2, arity=2, precedence=2)\n",
+      "b (const)\n",
+      "* (fctn_in_2, arity=2, precedence=2)\n",
+      "!= (pred_in, arity=2)\n",
+      "c (const)\n",
+      "imp (conn_arrow, arity=2, precedence=1)\n",
+      "f_a2 (fctn_pre, arity=2)\n",
+      "( (lparen)\n",
+      "f_b (fctn_pre, arity=1)\n",
+      "( (lparen)\n",
+      "b (const)\n",
+      ") (rparen)\n",
+      ", (comma)\n",
+      "c_Socrates (const)\n",
+      ") (rparen)\n",
+      "< (pred_in, arity=2)\n",
+      "c (const)\n",
+      "^ (fctn_in_3, arity=2, precedence=3)\n",
+      "21 (numeral)\n"
      ]
     }
    ],
