Parsing 1st draft

--- a/logic_parser.ipynb
+++ b/logic_parser.ipynb
@@ -67,6 +67,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imp or and A B not C D\n",
+      "A B and C not or D imp\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_formula = \"A and B or not C imp D\"\n",
+    "testParser(input_formula)\n",
+    "testParser(input_formula, 'RPN')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
