--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -9,29 +9,43 @@
     "import sys\n",
     "sys.path.append('../')\n",
     " \n",
-    "from FO1st import *\n",
-    "\n",
-    "from IPython.display import display, Math"
+    "from FO1st import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- ! ' ^ #\n",
-      "+ * / % =\n",
-      "< > ( ) [\n",
-      "] { } , "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print_in_chunk(Token.SPECIAL_CHARS)"
+    "def testParser(input_text, showOption='polish', operOpt=False):\n",
+    "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'tree' | 'bussproof'\n",
+    "  # 'bussproof' output is LaTeX source text\n",
+    "  # operOpt has effect only when showOption == 'polish' or 'RPN'\n",
+    "  from IPython.display import display, Math\n",
+    "\n",
+    "  try:\n",
+    "    ast = parse_text(input_text)\n",
+    "  except ValueError as e:\n",
+    "    print(f\"ValueError: {e}\")\n",
+    "  except SyntaxError as e:\n",
+    "    print(f\"SyntaxError: {e}\")\n",
+    "  else:\n",
+    "    if showOption=='polish':\n",
+    "      print(ast.build_polish_notation(operOpt))\n",
+    "    elif showOption=='RPN':\n",
+    "      print(ast.build_RPN(operOpt))\n",
+    "    elif showOption=='infix_latex':\n",
+    "      s = ast.build_infix_latex()\n",
+    "      print(s) # latex source text\n",
+    "      display(Math(f\"${s}$\")) # render LaTeXed expression\n",
+    "    elif showOption=='tree':\n",
+    "      ast.draw_tree()\n",
+    "    elif showOption=='bussproof':\n",
+    "      s = ast.build_bussproof() \n",
+    "      print(s)\n",
+    "    else:\n",
+    "      raise ValueError(f\"Invalid showOption: {showOption}\")"
    ]
   },
   {
@@ -43,139 +57,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x (var)\n",
-      "^+ (oper_post, arity=1, precedence=4)\n",
-      "+ (oper_in_1, arity=2, precedence=1)\n",
-      "y1 (var)\n",
-      "^- (oper_post, arity=1, precedence=4)\n",
-      "+ (oper_in_1, arity=2, precedence=1)\n",
-      "cBob (const)\n",
-      "^* (oper_post, arity=1, precedence=4)\n",
-      "+ (oper_in_1, arity=2, precedence=1)\n",
-      "d (const)\n",
-      "^# (oper_post, arity=1, precedence=4)\n",
-      "+ (oper_in_1, arity=2, precedence=1)\n",
-      "y (var)\n",
-      "^o (oper_post, arity=1, precedence=4)\n",
-      "* (oper_in_2, arity=2, precedence=2)\n",
-      "z (var)\n",
-      "^inv (oper_post, arity=1, precedence=4)\n"
+      "- * y ^ z 2 f z\n",
+      "<= * y ^ z 2 f z\n"
      ]
     }
    ],
    "source": [
-    "input_text = \"x^+ + y1^- + cBob^* + d^# + y^o * z^inv\"\n",
-    "testTokenizer(input_text)"
+    "v_str1 = \"y * z^2 - f(z)\"\n",
+    "testParser(v_str1) # parse as a term\n",
+    "v_str2 = \"y * z^2 <= f(z)\"\n",
+    "testParser(v_str2) # parse as a formula"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_text = \"forall x P(-x30!') imp a^inv + b^o >= c^* and a * b* != c imp f_a2(f_b(b), c_Socrates) < c^21 iff Q\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forall (quantifier, arity=1, precedence=4)\n",
-      "x (var)\n",
-      "P (prop_letter, arity=0)\n",
-      "( (lparen)\n",
-      "- (oper_in_1, arity=2, precedence=1)\n",
-      "x30 (var)\n",
-      "! (oper_post, arity=1, precedence=4)\n",
-      "' (oper_post, arity=1, precedence=4)\n",
-      ") (rparen)\n",
-      "imp (conn_arrow, arity=2, precedence=1)\n",
-      "a (const)\n",
-      "^inv (oper_post, arity=1, precedence=4)\n",
-      "+ (oper_in_1, arity=2, precedence=1)\n",
-      "b (const)\n",
-      "^o (oper_post, arity=1, precedence=4)\n",
-      ">= (pred_in, arity=2)\n",
-      "c (const)\n",
-      "^* (oper_post, arity=1, precedence=4)\n",
-      "and (conn_2ary, arity=2, precedence=2)\n",
-      "a (const)\n",
-      "* (oper_in_2, arity=2, precedence=2)\n",
-      "b (const)\n",
-      "* (oper_in_2, arity=2, precedence=2)\n",
-      "!= (pred_in, arity=2)\n",
-      "c (const)\n",
-      "imp (conn_arrow, arity=2, precedence=1)\n",
-      "f_a2 (func_pre, arity=2)\n",
-      "( (lparen)\n",
-      "f_b (func_pre, arity=1)\n",
-      "( (lparen)\n",
-      "b (const)\n",
-      ") (rparen)\n",
-      ", (comma)\n",
-      "c_Socrates (const)\n",
-      ") (rparen)\n",
-      "< (pred_in, arity=2)\n",
-      "c (const)\n",
-      "^ (oper_in_3, arity=2, precedence=3)\n",
-      "21 (numeral)\n",
-      "iff (conn_arrow, arity=2, precedence=1)\n",
-      "Q (prop_letter, arity=0)\n"
+      "y z 2 ^ * z f -\n",
+      "y z 2 ^ * z f <=\n"
      ]
     }
    ],
    "source": [
-    "testTokenizer(input_text)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```xml\n",
-    "<formula> ::= { <comp_fmla1> \"imp\" } <comp_fmla1> | \n",
-    "                <comp_fmla1> { ( \"iff\" | \"xor\") <comp_fmla1> }\n",
-    "<comp_fmla1> ::= <comp_fmla2> { (\"and\" | \"or\") <comp_fmla2> }\n",
-    "<comp_fmla2> ::= { (\"not\" | <quantifier>) } '(' <formula> ')' | \n",
-    "                 { (\"not\" | <quantifier>) } <atom>\n",
-    "<quantifier> ::= \"forall\" | \"exists\"\n",
-    "<atom> ::= \"bot\" | <prop_letter> | \n",
-    "           <pred_pre> \"(\" <term> {',' <term>} \")\" |\n",
-    "           <term> <pred_in> <term>\n",
-    "<term> ::= (<term1> | <nterm1>) { <oper_in_1> <term1> }\n",
-    "<nterm1> ::= <oper_pre> { <oper_pre> } <term1>\n",
-    "<term1> ::= <factor> { <oper_in_2> <factor> }\n",
-    "<factor> ::= { <factor_exp> <oper_in_3> } <factor_exp>\n",
-    "<factor_exp> ::= <factor_postfix> { <oper_postfix> }\n",
-    "<factor_postfix> ::= \"(\" <term> \")\"  | <func_call> | <identifier>\n",
-    "<func_call> ::= <func_pre> '(' <term> {',' <term>} ')' \n",
-    "<identifier> ::= <const> | <numeral> | <var>\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "or and = x 1 P1 f y Q\n"
-     ]
-    }
-   ],
-   "source": [
-    "v_str = \"x = 1 and P1(f(y)) or Q\"\n",
-    "print(parse_text(v_str))"
+    "v_str1 = \"y * z^2 - f(z)\"\n",
+    "testParser(v_str1, 'RPN') # parse as a term\n",
+    "v_str2 = \"y * z^2 <= f(z)\"\n",
+    "testParser(v_str2, 'RPN') # parse as a formula"
    ]
   }
  ],
