--- a/test.ipynb
+++ b/test.ipynb
@@ -2,19 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    " \n",
     "from FO1st import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-f_{2}(-x, -(-c), {\\rm 12})\n"
+      "f(x, y)\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle -f_{2}(-x, -(-c), {\\rm 12})$"
+       "$\\displaystyle f(x, y)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -74,42 +71,16 @@
     }
    ],
    "source": [
-    "v_str1 = \"-f_23(-x, --c, 12)\"\n",
+    "v_str1 = \"f_2(x, y)\"\n",
     "testParser(v_str1, 'infix_latex') # parse as a term"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+ - x - + y x\n",
-      "-x + (-(y + x))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -x + (-(y + x))$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "v_str1 = \"-x + (-(y+x))\" \n",
-    "\n",
-    "testParser(v_str1) \n",
-    "testParser(v_str1, 'infix_latex') "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
