Done: build_infix_latex()

--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +110,167 @@
     "testParser(v_str1) \n",
     "testParser(v_str1, 'infix_latex') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/ x div y z\n",
+      "x / (y \\div z)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x / (y \\div z)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str1 = \"x / (y div z)\" \n",
+    "\n",
+    "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_latex') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^ + a c b\n",
+      "(a + c)^{b}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle (a + c)^{b}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str1 = \"(a+c)^b\" \n",
+    "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_latex') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^ ^# ^inv a 2\n",
+      "((a^{-1})^\\#)^{2}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ((a^{-1})^\\#)^{2}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str1 = \"a^inv^#^2\" \n",
+    "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_latex') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imp not A and = y y not > ^ x 2 1\n",
+      "\\neg\\, A\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\neg\\, A\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > 1)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str = \"not A imp y = y and not x^2 > 1\"\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iff forall y >= f x y exists x B1 x\n",
+      "\\forall y\\, (f(x) \\ge y)\\: \\leftrightarrow\\: \\exists x\\, B(x)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\forall y\\, (f(x) \\ge y)\\: \\leftrightarrow\\: \\exists x\\, B(x)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str = \"forall y  f(x) >= y iff exists x B1(x) \"\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')"
+   ]
   }
  ],
  "metadata": {
@@ -128,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
