seq_infix() for build_infix_latex()
handles formulas like a < b = c
fixed a bug in Parse.atom()

--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +271,77 @@
     "testParser(v_str)\n",
     "testParser(v_str, 'infix_latex')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and < x ^ y 2 <= ^ y 2 + u f 1\n",
+      "x < y^{2} \\le u + f(1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x < y^{2} \\le u + f(1)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str = \"x < y^2 <= u+f(1)\"\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and and < ^ x 2 + y 1 = + y 1 - z sim - z f u\n",
+      "x^{2} < y + 1 = -z \\sim f(u)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x^{2} < y + 1 = -z \\sim f(u)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v_str = \"x^2 < y+1 =  -z  sim f(u)\"\n",
+    "testParser(v_str) # parse has error\n",
+    "testParser(v_str, 'infix_latex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
