--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -57,13 +57,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-f_{2}(-x, -(-c), {\\rm 12})\n"
+      "-f_{2}(-x, -(-c), 12)\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle -f_{2}(-x, -(-c), {\\rm 12})$"
+       "$\\displaystyle -f_{2}(-x, -(-c), 12)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -217,14 +217,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "imp not A and = y y not > ^ x 2 1\n",
-      "\\neg\\, A\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > 1)\n"
+      "imp not A and = y y not > ^ x 2 f2 + x 1 y\n",
+      "\\neg\\, A\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > f(x + 1, y))\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\neg\\, A\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > 1)$"
+       "$\\displaystyle \\neg\\, A\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > f(x + 1, y))$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -235,7 +235,7 @@
     }
    ],
    "source": [
-    "v_str = \"not A imp y = y and not x^2 > 1\"\n",
+    "v_str = \"not A imp y = y and not x^2 > f2(x + 1, y)\"\n",
     "testParser(v_str)\n",
     "testParser(v_str, 'infix_latex')"
    ]
@@ -243,38 +243,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iff forall y >= f x y exists x B1 x\n",
-      "\\forall y\\, (f(x) \\ge y)\\: \\leftrightarrow\\: \\exists x\\, B(x)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\forall y\\, (f(x) \\ge y)\\: \\leftrightarrow\\: \\exists x\\, B(x)$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "v_str = \"forall y  f(x) >= y iff exists x B1(x) \"\n",
-    "testParser(v_str)\n",
-    "testParser(v_str, 'infix_latex')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,21 +274,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "and and < ^ x 2 + y 1 = + y 1 - z sim - z f u\n",
-      "x^{2} < y + 1 = -z \\sim f(u)\n"
+      "and and < ^ x 2 + ^ y - / 1 2 1 = + ^ y - / 1 2 1 - z sim - z f u\n",
+      "x^{2} < y^{-1 / 2} + 1 = -z \\sim f(u)\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle x^{2} < y + 1 = -z \\sim f(u)$"
+       "$\\displaystyle x^{2} < y^{-1 / 2} + 1 = -z \\sim f(u)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -328,12 +296,178 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{prooftree}\n",
+      "\\AxiomC{$x^{2}$}\n",
+      "\\AxiomC{$y^{-1 / 2} + 1$}\n",
+      "\\BinaryInfC{$<$}\n",
+      "\\AxiomC{$y^{-1 / 2} + 1$}\n",
+      "\\AxiomC{$-z$}\n",
+      "\\BinaryInfC{$=$}\n",
+      "\\BinaryInfC{$\\wedge$}\n",
+      "\\AxiomC{$-z$}\n",
+      "\\AxiomC{$f(u)$}\n",
+      "\\BinaryInfC{$\\sim$}\n",
+      "\\BinaryInfC{$\\wedge$}\n",
+      "\\end{prooftree}\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "v_str = \"x^2 < y+1 =  -z  sim f(u)\"\n",
-    "testParser(v_str) # parse has error\n",
-    "testParser(v_str, 'infix_latex')"
+    "v_str = \"x^2 < y^(-1/2)+1 =  -z  sim f(u)\"\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')\n",
+    "testParser(v_str, 'bussproof')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and A2 x y > f2 x y 2\n",
+      "A(x, y)\\: \\wedge\\: f(x, y) > 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A(x, y)\\: \\wedge\\: f(x, y) > 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{prooftree}\n",
+      "\\AxiomC{$x$}\n",
+      "\\AxiomC{$y$}\n",
+      "\\BinaryInfC{$A$}\n",
+      "\\AxiomC{$f(x, y)$}\n",
+      "\\AxiomC{$2$}\n",
+      "\\BinaryInfC{$>$}\n",
+      "\\BinaryInfC{$\\wedge$}\n",
+      "\\end{prooftree}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_str = 'A2(x, y) and f2(x,y) > 2'\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')\n",
+    "testParser(v_str, 'bussproof')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forall x not A1 x\n",
+      "\\forall x\\, \\neg\\, A(x)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\forall x\\, \\neg\\, A(x)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{prooftree}\n",
+      "\\AxiomC{$x$}\n",
+      "\\UnaryInfC{$A$}\n",
+      "\\UnaryInfC{$\\neg$}\n",
+      "\\UnaryInfC{$\\forall x$}\n",
+      "\\end{prooftree}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_str = \"forall x not A1(x)\"\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')\n",
+    "testParser(v_str, 'bussproof')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iff forall y >= f x y exists x B1 x\n",
+      "\\forall y\\, (f(x) \\ge y)\\: \\leftrightarrow\\: \\exists x\\, B(x)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\forall y\\, (f(x) \\ge y)\\: \\leftrightarrow\\: \\exists x\\, B(x)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{prooftree}\n",
+      "\\AxiomC{$f(x)$}\n",
+      "\\AxiomC{$y$}\n",
+      "\\BinaryInfC{$\\ge$}\n",
+      "\\UnaryInfC{$\\forall y$}\n",
+      "\\AxiomC{$x$}\n",
+      "\\UnaryInfC{$B$}\n",
+      "\\UnaryInfC{$\\exists x$}\n",
+      "\\BinaryInfC{$\\leftrightarrow$}\n",
+      "\\end{prooftree}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_str = \"forall y  f(x) >= y iff exists x B1(x) \"\n",
+    "testParser(v_str)\n",
+    "testParser(v_str, 'infix_latex')\n",
+    "testParser(v_str, 'bussproof')"
    ]
   },
   {
