First-order logic parser. Done

--- a/arith7parser.ipynb
+++ b/arith7parser.ipynb
@@ -20,11 +20,11 @@
     "\n",
     "# import httpimport\n",
     "# with httpimport.remote_repo(url):\n",
-    "#   from arith_parse import *\n",
+    "#   from arith7_parse import *\n",
     "\n",
     "# If you get SSLCertVerificationError then try the following. \n",
     "# Of course, you should have arith_parse.py available locally.\n",
-    "from arith_parse import *\n",
+    "from arith7_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', showOperType=False):\n",
     "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'tree'\n",
