--- a/propositional_logic_parser.ipynb
+++ b/propositional_logic_parser.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Language of logic parser is somewhat simpler than language of arithmetic."
+    "The language of propositional logic is somewhat simpler than the language of arithmetic."
    ]
   },
   {
@@ -22,6 +22,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have added a new showOption called `bussproof`. This option does not generate a diagram \n",
+    "but instead produces LaTeX code that can be seamlessly incorporated into a LaTeX document. \n",
+    "\n",
+    "To ensure correct compilation of the source .tex file, it is necessary to include the `\\usepackage{bussproofs}` \n",
+    "command in the preamble."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This script works good only when the identifier for propositional letter is short.  This problem has been fixed in the next script `first_order_logic_parser.ipynb`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -30,11 +48,11 @@
     "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main'\n",
     "# import httpimport\n",
     "# with httpimport.remote_repo(url):\n",
-    "#   from logic_parse import *\n",
+    "#   from propositional_logic_parse import *\n",
     "\n",
     "# If you get SSLCertVerificationError then try the following. \n",
     "# Of course, you should have arith_parse.py available locally.\n",
-    "from logic_parse import *\n",
+    "from propositional_logic_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', showOperType=False):\n",
     "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'tree' | 'bussproof'\n",
@@ -470,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
