--- a/arith6parser.ipynb
+++ b/arith6parser.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arith6 is an extension of Arith5.  \n",
+    "`G_ar6` is an extension of `G_ar5`.  \n",
+    "`arith6parser.ipynb` is an implementation of `G_ar6`.\n",
     "\n",
     "Now, we can\n",
     "1. handle function symbols,\n",
@@ -1547,7 +1548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
