--- a/arith4parser.ipynb
+++ b/arith4parser.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arith4 is a simple grammar for arithmetic.\n",
-    "We'll build a parser for this grammar.\n",
+    "`G_ar4` is a simple grammar for arithmetic.  \n",
+    "`arith4parser.ipynb` is an implementation of `G_ar4`.\n",
     "\n",
     "```xml\n",
     "<expr> ::= <term> { (\"+\" | \"-\") <term> }\n",
@@ -23,14 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \"value\" argument is input through tokenizer().\n",
+    "# So a certain degree of validity check is done already.\n",
+    "\n",
     "class Token:\n",
     "  def __init__(self, value):\n",
     "    self.value = value\n",
-    "    # input value is guaranteed to be a valid token\n",
     "    if value in (\"+\", \"-\"):\n",
     "      self.token_type = 'op_type1' # precedence 1\n",
     "    elif value in (\"*\", \"/\"):\n",
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +89,9 @@
     "\n",
     "def tokenizer(input_text):\n",
     "  tokens = []\n",
-    "  # split the input text into a list of tokens at word boundries and whitespaces\n",
-    "  # then remove empty strings and strip off leading and trailing whitespaces\n",
+    "  # Split the input text into a list of tokens at word boundaries and\n",
+    "  # whitespaces, then remove empty strings and strip off leading and \n",
+    "  # trailing whitespaces.\n",
     "  li = [s.strip() for s in re.split(r\"\\b|\\s\", input_text, re.ASCII) \n",
     "                  if s.strip()]\n",
     "  for s in li: # s is a string\n",
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
