--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -5,6 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`G_ar5` is an extension of `G_ar4`.  \n",
+    "`arith5parser.ipynb` is an implementation of `G_ar5`.\n",
+    "\n",
     "Arith5 is an extension of Arith4.  \n",
     "\n",
     "Added components are:\n",
@@ -37,14 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \"value\" argument is input through tokenizer().\n",
+    "# So a certain degree of validity check is done already.\n",
+    "\n",
     "class Token:\n",
     "  def __init__(self, value):\n",
     "    self.value = value\n",
-    "    # input value is guaranteed to be a valid token\n",
     "    if value in (\"+\", \"-\"):\n",
     "      self.token_type = 'op_bin_1' # precedence 1\n",
     "    elif value in (\"*\", \"/\"):\n",
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +114,9 @@
     "\n",
     "def tokenizer(input_text):\n",
     "  tokens = []\n",
-    "  # split the input text into a list of tokens at word boundries and whitespaces\n",
-    "  # then remove empty strings and strip off leading and trailing whitespaces\n",
+    "  # Split the input text into a list of tokens at word boundaries and\n",
+    "  # whitespaces, then remove empty strings and strip off leading and \n",
+    "  # trailing whitespaces.\n",
     "  li = [s.strip() for s in re.split(r\"\\b|\\s\", input_text, re.ASCII) \n",
     "                  if s.strip()]\n",
     "  for s in li: # s is a string\n",
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +338,8 @@
     "      if self.check_token_type('rparen'):\n",
     "        self.advance()\n",
     "      else:\n",
-    "        raise SyntaxError(\"Expected ')' after expression at {self.index}, in factor_postfix()\")\n",
+    "        raise SyntaxError(\"Expected ')' after expression at \" + \n",
+    "                          f\"{self.index}, in factor_postfix()\")\n",
     "    else:\n",
     "      node = self.atom()\n",
     "\n",
@@ -345,7 +352,8 @@
     "        self.advance()\n",
     "        return Node(token)\n",
     "      else:\n",
-    "        raise SyntaxError(f\"Expected numeral or identifier at {self.index}, in atom(): {token}\")\n",
+    "        raise SyntaxError(\"Expected numeral or identifier at \" + \n",
+    "                          f\"{self.index}, in atom(): {token}\")\n",
     "    else:\n",
     "      raise SyntaxError(\"Unexpected end of input, in atom()\")\n",
     "      \n",
@@ -354,7 +362,9 @@
     "  parser = Parser(tokens)\n",
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
     "  if parser.current_token is not None:\n",
-    "    raise SyntaxError(f\"Unexpected token {parser.current_token} at {parser.index}, in parse_input(). Expected end of input.\")\n",
+    "    raise SyntaxError(f\"Unexpected token {parser.current_token}\" + \n",
+    "      f\" at {parser.index}, \" + \"in parse_input(). \" + \n",
+    "      \"Expected end of input.\")\n",
     "  return ast\n",
     "\n",
     "def testParser(input_text, showOperType=False):\n",
@@ -370,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
