--- a/first_order_logic_parser.ipynb
+++ b/first_order_logic_parser.ipynb
@@ -44,7 +44,8 @@
     "from first_order_logic_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', verbose=False):\n",
-    "  # showOption ::= 'polish' | 'RPN' | 'infix_latex' | 'bussproof' | 'tree'\n",
+    "  # showOption ::= 'polish' | 'RPN' | 'infix_text' | 'infix_latex' |\n",
+    "  #                'bussproof' | 'tree'\n",
     "  # 'bussproof' output is LaTeX source text.\n",
     "  # verbose has effect only when showOption == 'polish', 'RPN' or 'tree'\n",
     "  from IPython.display import display, Math\n",
@@ -60,9 +61,12 @@
     "      print(ast.build_polish_notation(verbose))\n",
     "    elif showOption=='RPN':\n",
     "      print(ast.build_RPN(verbose))\n",
+    "    elif showOption=='infix_text':\n",
+    "      print(ast.build_infix('text'))\n",
     "    elif showOption=='infix_latex':\n",
-    "      s = ast.build_infix_latex()\n",
-    "      print(\"\\n$\", s, \"$\") # latex source text\n",
+    "      s = ast.build_infix('latex')\n",
+    "      if verbose:\n",
+    "        print(\"\\n$\", s, \"$\") # latex source text\n",
     "      display(Math(f\"${s}$\")) # render LaTeXed expression\n",
     "    elif showOption=='bussproof':\n",
     "      s = ast.build_bussproof() \n",
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +87,7 @@
      "output_type": "stream",
      "text": [
       "- f_23 - x - - c 12\n",
-      "\n",
-      "$ -f_{2}(-x, -(-c), 12) $\n"
+      "-f_23(-x, -(-c), 12)\n"
      ]
     },
     {
@@ -127,6 +130,7 @@
     "\n",
     "v_str1 = \"-f_23(-x, --c, 12)\"\n",
     "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_text') \n",
     "testParser(v_str1, 'infix_latex') \n",
     "testParser(v_str1, 'bussproof') # term has no tree structure\n",
     "testParser(v_str1, 'tree', verbose=True) # term has no tree structure"
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +146,7 @@
      "output_type": "stream",
      "text": [
       "+ - x - + y x\n",
-      "\n",
-      "$ -x + (-(y + x)) $\n"
+      "-x + (-(y + x))\n"
      ]
     },
     {
@@ -175,13 +178,14 @@
     "v_str1 = \"-x + (-(y+x))\" \n",
     "\n",
     "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_text') \n",
     "testParser(v_str1, 'infix_latex') \n",
     "testParser(v_str1, 'bussproof') # term has no tree structure\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,8 +193,7 @@
      "output_type": "stream",
      "text": [
       "/ x div y z\n",
-      "\n",
-      "$ x / (y \\div z) $\n"
+      "x / (y div z)\n"
      ]
     },
     {
@@ -212,12 +215,13 @@
     "v_str1 = \"x / (y div z)\" \n",
     "\n",
     "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_text') \n",
     "testParser(v_str1, 'infix_latex') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,8 +229,7 @@
      "output_type": "stream",
      "text": [
       "^ + a c b\n",
-      "\n",
-      "$ (a + c)^{b} $\n"
+      "(a + c)^{b}\n"
      ]
     },
     {
@@ -247,12 +250,13 @@
     "\n",
     "v_str1 = \"(a+c)^b\" \n",
     "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_text') \n",
     "testParser(v_str1, 'infix_latex') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,8 +264,7 @@
      "output_type": "stream",
      "text": [
       "^ ^# ^inv a 2\n",
-      "\n",
-      "$ ((a^{-1})^\\#)^{2} $\n"
+      "((a^inv)^#)^{2}\n"
      ]
     },
     {
@@ -282,12 +285,13 @@
     "\n",
     "v_str1 = \"a^inv^#^2\" \n",
     "testParser(v_str1) \n",
+    "testParser(v_str1, 'infix_text') \n",
     "testParser(v_str1, 'infix_latex') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -295,8 +299,7 @@
      "output_type": "stream",
      "text": [
       "A3 x a + + y 1 z\n",
-      "\n",
-      "$ A(x, a, y + 1 + z) $\n"
+      "A3(x, a, y + 1 + z)\n"
      ]
     },
     {
@@ -340,6 +343,7 @@
     "\n",
     "v_str = 'A3(x,a,y+1+z)'\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -347,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -355,8 +359,7 @@
      "output_type": "stream",
      "text": [
       "ALongLongPred2 f2 x a y\n",
-      "\n",
-      "$ {\\rm ALongLongPred}(f(x, a), y) $\n"
+      "ALongLongPred2(f2(x, a), y)\n"
      ]
     },
     {
@@ -399,6 +402,7 @@
     "\n",
     "v_str = 'ALongLongPred2(f2(x,a),  y)'\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -406,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +418,7 @@
      "output_type": "stream",
      "text": [
       "imp BinaryPred2 x y = fLong x y\n",
-      "\n",
-      "$ {\\rm BinaryPred}(x, y)\\: \\rightarrow\\: {\\rm fLong}(x) = y $\n"
+      "BinaryPred2(x, y) imp fLong(x) = y\n"
      ]
     },
     {
@@ -468,8 +471,9 @@
    "source": [
     "# formula example 3\n",
     "\n",
-    "v_str = 'BinaryPred2(x, y) imp fLong(x) = y'\n",
+    "v_str = 'BinaryPred2( x, y)   imp fLong(x) = y'\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree', verbose=True)"
@@ -477,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -485,8 +489,7 @@
      "output_type": "stream",
      "text": [
       "imp not A_1 and = y y not > ^ x 2 f2 + x 1 y\n",
-      "\n",
-      "$ \\neg\\, A_{1}\\: \\rightarrow\\: y = y\\: \\wedge\\: \\neg\\, (x^{2} > f(x + 1, y)) $\n"
+      "not A_1 imp y = y and not (x^{2} > f2(x + 1, y))\n"
      ]
     },
     {
@@ -537,6 +540,7 @@
     "\n",
     "v_str = \"not A_1 imp y = y and not x^2 > f2(x + 1, y)\"\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -544,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -552,8 +556,7 @@
      "output_type": "stream",
      "text": [
       "and < x ^ y 2 <= ^ y 2 + u f 1\n",
-      "\n",
-      "$ x < y^{2} \\le u + f(1) $\n"
+      "x < y^{2} <= u + f(1)\n"
      ]
     },
     {
@@ -600,6 +603,7 @@
     "\n",
     "v_str = \"x < y^2 <= u+f(1)\"\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -607,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -615,8 +619,7 @@
      "output_type": "stream",
      "text": [
       "and and < ^ x 2 + ^ y - / 1 2 1 = + ^ y - / 1 2 1 - z sim - z f u\n",
-      "\n",
-      "$ x^{2} < y^{-1 / 2} + 1 = -z \\sim f(u) $\n"
+      "x^{2} < y^{-1 / 2} + 1 = -z sim f(u)\n"
      ]
     },
     {
@@ -668,6 +671,7 @@
     "\n",
     "v_str = \"x^2 < y^(-1/2)+1 =  -z  sim f(u)\"\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -675,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -683,8 +687,7 @@
      "output_type": "stream",
      "text": [
       "forall x not Alice_21 x\n",
-      "\n",
-      "$ \\forall x\\, \\neg\\, {\\rm Alice}_{2}(x) $\n"
+      "forall x not Alice_21(x)\n"
      ]
     },
     {
@@ -728,6 +731,7 @@
     "\n",
     "v_str = \"forall x not Alice_21(x)\"\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex')\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -735,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -743,6 +747,7 @@
      "output_type": "stream",
      "text": [
       "iff forall y >= f + x * z_1 ^inv c ^ y 2 exists x B1 y\n",
+      "forall y (f(x + z_1 * c^inv) >= y^{2}) iff exists x B1(y)\n",
       "\n",
       "$ \\forall y\\, (f(x + z_{1} * c^{-1}) \\ge y^{2})\\: \\leftrightarrow\\: \\exists x\\, B(y) $\n"
      ]
@@ -792,6 +797,7 @@
     "\n",
     "v_str = \"forall y  f(x + z_1 * c^inv) >= y^2 iff exists x B1(y)\"\n",
     "testParser(v_str)\n",
+    "testParser(v_str, 'infix_text')\n",
     "testParser(v_str, 'infix_latex', verbose=True)\n",
     "testParser(v_str, 'bussproof')\n",
     "testParser(v_str, 'tree')"
@@ -799,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
